[package]
name = "ruos"
version = "0.1.0"
authors = ["Ole Martin Ruud <barskern@outlook.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.0"
x86_64 = "0.10.0"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spinning_top = { version = "0.1.0", features = ["nightly"] }
